fixing search on mobile, instagram API fix, typeahead.js update, larger clickable area on hamburger menu

--- a/assets/scss/typeahead.scss
+++ b/assets/scss/typeahead.scss
@@ -14,26 +14,26 @@
 
 #searchcontrol {
 	margin-top: 6px;
-	
+
 	@media (max-width: 768px) {
 		margin-bottom: -14px;
 	}
-	
+
 	&:not(.search-active) {
 		.yearSelector {
 			display: inline-block;
 		}
-		
+
 		#bandsearch, .twitter-typeahead {
 			display: none !important;
 		}
 	}
-	
+
 	&.search-active {
 		.yearSelector {
 			display: none;
 		}
-		
+
 		#bandsearch {
 			display: inline-block;
 		}
@@ -55,7 +55,7 @@ span.twitter-typeahead {
 #searchcontrol .twitter-typeahead input {
 	box-shadow: none;
 }
-span.twitter-typeahead .tt-dropdown-menu {
+span.twitter-typeahead .tt-menu {
   position: absolute;
   top: 100%;
   left: 0;
@@ -77,7 +77,7 @@ span.twitter-typeahead .tt-dropdown-menu {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
 }
-span.twitter-typeahead .tt-suggestion > p {
+span.twitter-typeahead .tt-suggestion {
   display: block;
   padding: 0px 12px;
   padding-bottom: 1px;
@@ -88,9 +88,10 @@ span.twitter-typeahead .tt-suggestion > p {
   font-size: 14px;
   color: #333333;
   white-space: nowrap;
+  cursor: pointer;
 }
-span.twitter-typeahead .tt-suggestion > p:hover,
-span.twitter-typeahead .tt-suggestion > p:focus {
+span.twitter-typeahead .tt-suggestion:hover,
+span.twitter-typeahead .tt-suggestion:focus {
   text-decoration: none;
   outline: 0;
   background-color: #eee;
@@ -101,12 +102,12 @@ span.twitter-typeahead .tt-suggestion.tt-cursor {
 .input-group span.twitter-typeahead {
   display: block !important;
 }
-.input-group span.twitter-typeahead .tt-dropdown-menu {
+.input-group span.twitter-typeahead .tt-menu {
   top: 32px !important;
 }
-.input-group.input-group-lg span.twitter-typeahead .tt-dropdown-menu {
+.input-group.input-group-lg span.twitter-typeahead .tt-menu {
   top: 44px !important;
 }
-.input-group.input-group-sm span.twitter-typeahead .tt-dropdown-menu {
+.input-group.input-group-sm span.twitter-typeahead .tt-menu {
   top: 28px !important;
 }
